# eps-common-workflows

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  release.config.cjs  semantic-release-pypi-5.2.0.tgz  sonar-project.properties  trivy.yaml  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml
.github/actions/get_called_ref/: action.yml
.github/workflows/: build_and_push_docker_image.yml  combine-dependabot-prs.yml  dependabot-auto-approve-and-merge.yml  get-repo-config.yml  pr_title_check.yml  publish_nhsd_git_secrets_to_github.yml  pull_request.yml  quality-checks-devcontainer.yml  quality-checks.yml  release.yml  sync_copilot.yml  tag-release-devcontainer.yml  tag-release.yml  tag_latest_container_images.yml  update-dev-container-version.yml  verify-attestation.yml  verify_attestation.yml
dockerfiles/: nhsd-git-secrets.dockerfile
release_notes/: v5.3.10.md  v5.3.11.md  v5.3.12.md  v5.3.9.md  v5.4.0.md  v5.4.1.md  v5.4.2.md  v5.4.3.md  v5.4.4.md  v5.4.5.md  v5.5.0.md  v5.5.1.md  v5.5.2.md  v5.5.3.md  v5.6.2.md  v5.6.3.md  v5.6.4.md  v5.6.6.md  v5.6.8.md  v5.8.0.md  v5.8.1.md  v5.8.15.md  v5.8.16.md  v5.8.17.md  v5.8.19.md  v5.8.21.md  v5.8.22.md  v5.8.23.md  v5.8.3.md  v5.8.8.md  v5.8.9.md  v6.0.1.md  v6.0.12.md  v6.0.13.md  v6.0.16.md  v6.0.17.md  v6.0.18.md  v6.0.19.md  v6.0.2.md  v6.0.20.md  (+4 more)
scripts/: check_makefile_target.sh  run_all_release.sh  trigger_release.py
(+4 files in other folders)
