[project]
python = "^3.12"
name = "eps-common-workflows"


[tool.poetry]
package-mode = false
name = "eps-common-workflows"
description = "EPS Workflow quality checks"
version = "0.0.1-alpha"
authors = [
  "EPS Team"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/eps-common-workflows"

[tool.poetry.dependencies]
python = "^3.14"
pre-commit = "^4.5.1"
requests = "^2.32.5"

[tool.poetry.scripts]

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
